syntax = "proto3";

option go_package = "genproto/public/";

package protos;

import "protos/election.proto";
import "protos/void.proto";
import "protos/public.proto";
import "protos/candidate.proto";

service PublicVoteService{
    rpc Create(CreatePublicVoteReq) returns (Void){}
    rpc Get(PublicVoteReq) returns (PublicVote){}
    rpc GetAll(Filter) returns (PublicVotesGetAllResp){}
    rpc Delete(GetByIdReq) returns (Void){}
}

message PublicVote{
    string id = 1;
    Election election = 2;
    Public public = 3;
    Candidate candidate = 4;
}


message PublicVoteReq{
    string id = 1;
    string election_id = 2;
    string public_id = 3;
    string candidate_id = 4;
}

message CreatePublicVoteReq{
    string id = 1;
    string election_id = 2;
    string public_id = 3;
    string candidate_id = 4;
}

message PublicVotesGetAllResp {
    repeated PublicVote publicvotes = 1;
}